# rust-beginning-examples

./: README.md
debug01/: Cargo.toml
debug01/csvs/: data.csv
debug01/src/: main.rs
debug01/src/examples/csv/: csv-read-files.rs  csv-to-struct.rs
debug01/src/examples/polars/: polars-csv-main.rs
debug01/src/examples/stdin/: stdin-test.rs
