[package]
name = "debug01"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde    = {version="1.0", features = ["derive"]}
polars   = "0.36.2"
csv         = "1.3.0"

# To run examples: cargo run --example polars-csv-main
[[example]]
name        = "polars-csv-main"
path          = "src/examples/polars/polars-csv-main.rs"

[[example]]
name        = "csv-read-files"
path          = "src/examples/csv/csv-read-files.rs"
